--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a{
     line-height: 45px;
     font-size: 30px;
     float: left;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid black;
     color: rgb(103, 71, 33);
 }
 .menu ul li{
@@ -44,7 +44,7 @@ a{
     position: relative;
     width: 320px;
     height: 48px;
-    border: 1px solid;
+    border: 1px solid #c2c2c2;
     float: left;
     border-radius: 5px;
     margin-top: 3px;
@@ -66,11 +66,13 @@ input{
     height: 100%;
     margin: 0;
     display: flex;
+    background: url(../images/bg1.jpg);
 }
 .contents{
     width: 300px;
     height: 100%;
     border-right: 1px solid;
+    background-color: #fff;
 }
 .foodh3{
     margin-bottom: 10px;
@@ -84,8 +86,8 @@ input{
 .main_wrap{
     width: 50%;
     height: 100%;
-    margin: auto;
     text-align: center;
+    margin: auto;
 }
 .main_wrap img{
     width: 600px;
@@ -95,17 +97,23 @@ input{
     box-shadow: 10px 10px 3px #333;
 }
 h1{
-    height: 100px;
-    line-height: 100px;
+    width: 400px;
+    height: 60px;
+    line-height: 60px;
+    margin: 20px auto;
+    border: 1px solid;
+    border-radius: 5px;
+    background-color: #fff;
 }
 .mainh2{
     font-size: 35px;
     border: 1px solid;
-    width: 220px;
+    width: 250px;
     height: 60px;
     line-height: 50px;
     border-radius: 5px;
     margin:0 auto;
+    background-color: #fff;
 }
 .magazine{
     width: 50%;
